--- a/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
@@ -16,7 +16,7 @@
 <div id="mySidenav" class="sidenav">
     <div>
         <a class="active-page">Login</a>
-        <a href="#/register">Register</a>
+        <a href="#!/register">Register</a>
     </div>
 </div>
 <div class="form-center">
@@ -27,7 +27,7 @@
         <form name="loginForm" ng-submit="model.login(user)">
             <label><h4><strong>Login</strong></h4></label>
             <label class="pull-right">
-                <a href="#/register">
+                <a href="#!/register">
                     New user? Click here.
                 </a>
             </label>
