--- a/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
@@ -1,10 +1,149 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <a>
+            <div ng-show="model.open">
+                <span class="glyphicon glyphicon-option-vertical pull-left" ng-click="model.openNav()"></span>
+            </div>
+            <div ng-show="!model.open">
+                <span class="glyphicon glyphicon-option-vertical pull-left" ng-click="model.closeNav()"></span>
+            </div>
+        </a>
+        <div class="navbar-text pull-right" ng-if="model.userId">
+            <a class="name" href="#/user">Hi {{model.user.firstName}}</a>
+        </div>
+        <div class="navbar-text pull-right" ng-if="!model.userId">
+            <a class="name" href="#/login">Login</a>
+        </div>
+        <div class="navbar-header">
+            <a class="navbar-brand" ng-click="model.gotoHome()">Planet M</a>
+        </div>
+    </div>
+</nav>
 
-</body>
-</html>
+<div id="mySidenav" class="sidenav">
+    <div ng-show="model.userId">
+        <a href="#/user">Profile</a>
+    </div>
+    <div ng-show="model.user.type == 'Buyer'">
+        <a href="#/like">
+            Likes
+            <span><i class="fa fa-thumbs-up"></i></span>
+        </a>
+        <a href="#/bought">
+            Bought
+            <span><i class="fa fa-file-video-o"></i></span>
+        </a>
+        <a href="#/wishlist">
+            Wishlist
+            <span><i class="fa fa-star"></i></span>
+        </a>
+        <a href="#/fav">
+            Favorite Sellers
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Seller'">
+        <a href="#/order">
+            Orders
+            <span><i class="fa fa-usd"></i></span>
+        </a>
+        <a href="#/inventory">
+            Inventory
+            <span><i class="fa fa-table"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Admin'">
+        <a href="#/users">
+            All Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#/msgs">
+            Messages
+            <span><i class="fa fa-envelope"></i></span>
+        </a>
+        <a href="#/orders">
+            All Orders
+            <span><i class="fa fa-shopping-basket"></i></span>
+        </a>
+    </div>
+    <div ng-show="!model.userId">
+        <a href="#!/login">Login</a>
+    </div>
+    <div ng-show="model.userId">
+        <a ng-click="model.logout()">Logout</a>
+    </div>
+</div>
+
+<div id="main">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap=true>
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to={{$index}} ng-class="{active:!$index}" ng-repeat="movie in model.upcomingMovies"></li>
+        </ol>
+
+        <div class="carousel-inner">
+            <div class="item" ng-class="{active:!$index}" ng-repeat="movie in model.upcomingMovies">
+                <img class="hm-img" ng-src={{movie.backdrop_path}}>
+                <a class="carousel-caption home-image" ng-click="model.getMovieDetails(movie.id)">
+                    <h4>{{movie.title}}</h4>
+                </a>
+            </div>
+        </div>
+
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+
+        <div class="hidden-xs">
+            <form id="search-bar" class="input-group" ng-submit="model.searchTitle(search)">
+                <input ng-model="search" type="text" class="form-control search" placeholder="Search for movies...">
+                <span ng-click="model.searchTitle(search)" class="input-group-addon glyphicon glyphicon-search"></span>
+            </form>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="visible-xs">
+            <form class="input-group gap" ng-submit="model.searchTitle(search)">
+                <input ng-model="search" type="text" class="form-control search" placeholder="Search for movies...">
+                <span ng-click="model.searchTitle(search)" class="input-group-addon glyphicon glyphicon-search"></span>
+            </form>
+        </div>
+
+        <div class="row content">
+            <div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="movie in model.movies">
+                <a ng-click="model.getMovieDetails(movie.id)" class="thumbnail">
+                    <img class="img-responsive img" ng-src="{{movie.backdrop_path}}">
+                    <div class = "caption">
+                        <h4 class="text-center hideOverflow">{{movie.title}}</h4>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container-fluid">
+        <p class="copyright hidden-xs">© MANUJ BHARDWAJ 2017</p>
+        <div class="dropdown navbar-text pull-left" ng-if="model.user.type != 'Admin'">
+            <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-flag"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a ng-click="model.contactAdmin()">Contact Admin</a></li>
+            </ul>
+        </div>
+        <div class="dropdown navbar-text pull-right">
+            <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li ng-show="!model.userId"><a href="#/login">Login</a></li>
+                <li ng-show="model.userId"><a href="#/user">Profile</a></li>
+                <li ng-show="model.userId"><a ng-click="model.logout()">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
