--- a/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
@@ -9,13 +9,13 @@
             </div>
         </a>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/login">MovieOn</a>
+            <a class="navbar-brand" href="#!/login">MovieOn</a>
         </div>
     </div>
 </nav>
 <div id="mySidenav" class="sidenav">
     <div>
-        <a href="#/login">Login</a>
+        <a href="#!/login">Login</a>
         <a class="active-page" >Register</a>
     </div>
 </div>
@@ -92,7 +92,7 @@
             <button class="btn btn-primary btn-block"
                     ng-disabled="model.isDisabled">Register</button>
             <a class="btn btn-danger  btn-block"
-               href="#/login">Cancel</a>
+               href="#!/login">Cancel</a>
         </form>
     </div>
 </div>
@@ -105,7 +105,7 @@
                 Need help?
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#/contactAdmin">Contact Admin</a></li>
+                <li><a href="#!/contactAdmin">Contact Admin</a></li>
             </ul>
         </div>
         <div class="dropdown navbar-text pull-right">
@@ -113,7 +113,7 @@
                 <span class="glyphicon glyphicon-user"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#/login">Login</a></li>
+                <li><a href="#!/login">Login</a></li>
                 <li><a>Register</a></li>
             </ul>
         </div>
