--- a/PhaseB/MovieOn/src/main/webapp/css/style.css
+++ b/PhaseB/MovieOn/src/main/webapp/css/style.css
@@ -1,9 +1,32 @@
+.form-center2{
+    margin: auto;
+    width: 70%;
+}
+.registerLabel{
+    width: 8em;
+}
+.form-center{
+    margin: auto;
+    width: 60%;
+    padding: 70px 0;
+}
 .navbar-default {
-    background-color: black;
+    background-color: darkred;
+}
+.add-pad{
+    min-width: 24px;
 }
 body {
     padding-top: 60px;
     padding-bottom: 70px;
+}
+#myCarousel{
+    position: relative;
+    margin-top: -10px;
+}
+.img-max2{
+    min-height: 100px;
+    max-height: 100px;
 }
 .panel-default{
     padding-top: 15px;
@@ -11,15 +34,42 @@ body {
     padding-right: 15px;
     padding-bottom: 15px;
 }
+.blue{
+    color: dodgerblue;
+}
+.golden{
+    color: gold;
+}
+#search-bar{
+    padding-right: 200px;
+    padding-left: 200px;
+    position: absolute;
+    top: 90px;
+}
+.buy-button{
+    margin-left: 15px;
+}
+.img-likes{
+    max-height: 10px;
+}
 .active-page{
-    background-color: dimgrey;
+    background-color: #cd594a;
 }
-.form-center2{
-    margin: auto;
-    width: 70%;
+.name {
+    color: white;
 }
-.registerLabel{
-    width: 8em;
+.name:hover{
+    color: black;
+}
+.hm-img{
+
+}
+.content{
+    margin-top: 20px;
+}
+.pull-up{
+    position: relative;
+    bottom: 5px;
 }
 .glyphicon-option-vertical{
     margin-top: 16px;
@@ -28,27 +78,111 @@ body {
 .btn{
     margin-top: 10px;
 }
+.shift-down{
+    margin-top: 20px;
+}
+.shift-up{
+    margin-top: -15px;
+}
+.img{
+    max-height: 160px;
+    width: 100%;
+}
+.label-default{
+    padding: 5px;
+}
+.pull-down{
+    padding-top: 10px;
+}
+.push-down{
+    padding-bottom: 30px;
+}
+.shift-left{
+    margin-left: -15px;
+}
+.shift-up-2{
+    margin-top: -10px;
+}
+.push{
+    padding: 5px;
+}
+.font-gap{
+    margin-top: 25px;
+}
+.home-image:hover{
+    color: black;
+}
 a, a:hover, a:active, a:visited, a:focus {
     text-decoration:none;
     cursor: pointer;
+}
+.text, .text:hover, .text:active, .text:visited, .text:focus {
+    color: inherit;
+}
+.popularity{
+    margin-top: -55px;
+}
+.popu{
+    margin-top: -20px;
+}
+.imdb, .imdb:hover{
+    color: inherit;
+    margin-right: 15px;
+}
+.fa-imdb{
+    margin-top: 20px;
+    background-color: black;
+    color: goldenrod;
+}
+.login-btn{
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-left: 10px;
+}
+.hideOverflow{
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+}
+.center{
+    text-align: center;
 }
 .glyphicon{
     color: white;
 }
 .glyphicon:hover{
-    color: grey;
+    color: black;
+}
+.glyphicon-edit{
+    color: dodgerblue;
+}
+.glyphicon-menu-hamburger{
+    color: dodgerblue;
+}
+.glyphicon-search{
+    color: darkred;
+    background-color: white;
+}
+.search{
+    margin-top: 2px;
+}
+.submit-btn{
+    display: none;
+}
+#my-file-selector{
+    display:none;
 }
 .navbar-default .navbar-brand{
     color: white;
 }
 .navbar-default .navbar-brand:hover{
-    color: grey;
+    color: black;
 }
 .navbar-default .navbar-link{
     color: white;
 }
 .navbar-default .navbar-link:hover{
-    color: grey;
+    color: black;
 }
 
 div.collapse .nav-link a{
@@ -57,6 +191,58 @@ div.collapse .nav-link a{
 div.collapse .nav-link a:hover{
     color: black;
 }
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+.no-margin{
+    margin: 0px;
+}
+.align{
+    margin-left: 0px;
+}
+.leftDiv{
+    border-right: 1px solid lightgrey;
+    height: auto;
+}
+.youtubeWidget{
+    width: auto;
+}
+.gap{
+    margin-top: 15px;
+}
+.newGap{
+    margin-top: 5px;
+}
+.line{
+    display: inline-block;;
+}
+.youtube-widget iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+.mytoolbar {
+    position: absolute;
+    right: 20px;
+    background-color: white;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    border-bottom-left-radius: 5px;
+    opacity: 0.8;
+    z-index: 1;
+}
+.youtube-widget {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+
 .sidenav {
     height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
@@ -64,7 +250,7 @@ div.collapse .nav-link a:hover{
     z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
-    background-color: black; /* Black*/
+    background-color: darkred; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -79,7 +265,7 @@ div.collapse .nav-link a:hover{
 }
 
 .sidenav a:hover, .offcanvas a:focus{
-    color: grey;
+    color: black;
 }
 .sidenav .closebtn {
     position: absolute;
@@ -95,11 +281,26 @@ div.collapse .nav-link a:hover{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+.img-max{
+    min-height: 80px;
+    max-height: 80px;
+    max-width: 120px;
+    min-width: 120px;
+}
 .user-grey{
     color: darkslategrey; !important;
 }
 .button-down{
     padding-bottom: 10px;
+}
+.fixed-width{
+    min-width: 120px;
+}
+.fixwidth{
+    max-width: 100px;
+}
+.shift-further-up{
+    margin-top: -20px;
 }
 p.copyright {
     position: absolute;
@@ -114,8 +315,9 @@ p.condition{
     position: absolute;
     font-size: 0.8em;
 }
-.form-center{
-    margin: auto;
-    width: 60%;
-    padding: 70px 0;
+.glyphicon-remove{
+    color: dodgerblue;
+}
+.red{
+    color: red;
 }
