--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -9,29 +9,68 @@
             </div>
         </a>
         <div class="navbar-text pull-right" ng-show="model.userId">
-            <a class="name" href="#/profile">Hi {{model.user.firstName}}</a>
+            <a class="name" href="#!/profile">Hi {{model.user.firstName}}</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/profile">MovieOn</a>
+            <a class="navbar-brand" href="#!/home">MovieOn</a>
         </div>
     </div>
 </nav>
 
 <div id="mySidenav" class="sidenav">
-    <a class="active-page">Profile</a>
-    <div ng-show="model.user.role == 'Student'">
-        <a href="#/course">Courses</a>
+    <div ng-show="model.userId">
+        <a class="active-page" href="#!/user">Profile</a>
     </div>
-    <div ng-show="model.user.role == 'Professor'">
-        <a href="#/stats">Statistics</a>
-        <a href="#/course">Courses</a>
+    <div ng-show="model.user.type == 'Buyer'">
+        <a href="#!/like">
+            Likes
+            <span><i class="fa fa-thumbs-up"></i></span>
+        </a>
+        <a href="#!/bought">
+            Bought
+            <span><i class="fa fa-file-video-o"></i></span>
+        </a>
+        <a href="#!/wishlist">
+            Wishlist
+            <span><i class="fa fa-star"></i></span>
+        </a>
+        <a href="#!/fav">
+            Favorite Sellers
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
     </div>
-    <div ng-show="model.user.role == 'admin'">
-        <a href="#/userApprove">Approve users</a>
-        <a href="#/analysis">Analysis</a>
+    <div ng-show="model.user.type == 'Seller'">
+        <a href="#!/order">
+            Orders
+            <span><i class="fa fa-usd"></i></span>
+        </a>
+        <a href="#!/inventory">
+            Inventory
+            <span><i class="fa fa-table"></i></span>
+        </a>
     </div>
-    <a ng-click="model.logout()">Logout</a>
+    <div ng-show="model.user.type == 'Admin'">
+        <a href="#!/users">
+            All Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/msgs">
+            Messages
+            <span><i class="fa fa-envelope"></i></span>
+        </a>
+        <a href="#!/orders">
+            All Orders
+            <span><i class="fa fa-shopping-basket"></i></span>
+        </a>
+    </div>
+    <div ng-show="!model.userId">
+        <a href="#!/login">Login</a>
+    </div>
+    <div ng-show="model.userId">
+        <a ng-click="model.logout()">Logout</a>
+    </div>
 </div>
+
 
 <div class="form-center2">
     <div class="container-fluid panel panel-default" id="main">
@@ -105,7 +144,7 @@
                 Need help?
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#/contactAdmin">Contact Admin</a></li>
+                <li><a href="#!/contactAdmin">Contact Admin</a></li>
             </ul>
         </div>
         <div class="dropdown navbar-text pull-right">
