--- a/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
@@ -26,7 +26,7 @@
     <div ng-show="model.message" class="alert alert-info" role="alert">
         {{model.message}}
     </div>
-    <div ng-show="model.message" class="alert alert-danger" role="alert">
+    <div ng-show="model.error" class="alert alert-danger" role="alert">
         {{model.error}}
     </div>
     <h4 class="panel panel-default">Professors</h4>
