--- a/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
@@ -170,7 +170,7 @@
             </div>
             <div class="row panel panel-default">
                 <div class="col-sm-6">
-                    <a ng-click="model.gotoMovieImages(model.movie.id)" class="thumbnail">
+                    <a href="#!/movie/model.movieId/image" class="thumbnail">
                         <div class = "caption">
                             <h4 class="text-center hideOverflow">Movie Stills and Posters</h4>
                         </div>
@@ -178,7 +178,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a ng-click="model.gotoMovieVideos(model.movie.id)" class="thumbnail">
+                    <a href="#!/movie/model.movieId/video" class="thumbnail">
                         <div class = "caption">
                             <h4 class="text-center hideOverflow">Movie Trailers</h4>
                         </div>
