--- a/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
@@ -116,14 +116,14 @@
                         </div>
                     </div>
                     <div class="row" ng-if="model.user.type === 'Seller'">
-                        <div class="col-md-4 col-sm-4 col-xs-4 shift-down" ng-if="model.movieCount || model.movieCount == 0">
-                            <input ng-model="model.count" type="number" class="form-control fixwidth" placeholder="#Copies">
+                        <div class="col-md-4 col-sm-4 col-xs-4 shift-down" ng-if="model.inventory">
+                            <input ng-model="model.inventory.copies" type="number" class="form-control fixwidth" placeholder="#Copies">
                         </div>
-                        <div class="col-md-4 col-sm-4 col-xs-4 shift-down" ng-if="!model.movieCount && model.movieCount != 0">
+                        <div class="col-md-4 col-sm-4 col-xs-4 shift-down" ng-if="!model.inventory">
                             <input ng-model="model.num" type="number" class="form-control fixwidth" placeholder="#Copies">
                         </div>
-                        <div class="col-md-4 col-sm-4 col-xs-4" ng-if="model.movieCount || model.movieCount == 0">
-                            <button ng-click="model.updateMovie(model.count)"
+                        <div class="col-md-4 col-sm-4 col-xs-4" ng-if="model.inventory">
+                            <button ng-click="model.updateInventory(model.inventory.copies)"
                                     type="button"
                                     class="btn btn-warning shift-down"
                                     data-toggle="modal"
@@ -131,7 +131,7 @@
                                     data-backdrop="static"
                                     data-keyboard="false">Update #Copies</button>
                         </div>
-                        <div class="col-md-4 col-sm-4 col-xs-4" ng-if="!model.movieCount && model.movieCount != 0">
+                        <div class="col-md-4 col-sm-4 col-xs-4" ng-if="!model.inventory">
                             <button ng-click="model.sellMovie(model.num)"
                                     type="button"
                                     class="btn btn-warning shift-down"
