--- a/PhaseB/MovieOn/src/main/webapp/css/style.css
+++ b/PhaseB/MovieOn/src/main/webapp/css/style.css
@@ -381,3 +381,12 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+md-dialog.fullscreen-dialog {
+    max-width: 40%;
+    max-height: 70%;
+    width: 40%;
+    height: 70%;
+    border-radius: 0;
+}
+
