--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -131,9 +131,47 @@
             </div>
             <a class="btn btn-success btn-block"
                ng-click="model.update(model.user)">Update</a>
+            <a class="btn btn-success btn-block" ng-click="model.showDialog($event)">Add Address</a>
+            <script type="text/ng-template" id="dialogContent.tmpl.html">
+                <md-dialog class="fullscreen-dialog" aria-label="Full Screen Dialog Test">
+                    <md-toolbar>
+                        <div class="md-toolbar-tools">
+                            <md-button class="md-icon-button" ng-click="closeDialog()">
+                                <md-icon class="fa fa-times fa-2x"></md-icon>
+                            </md-button>
+                            <h2 flex="flex">Address</h2>
+                        </div>
+                    </md-toolbar>
+                    <md-dialog-content>
+                        <form name="addressForm"></form>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>Street Address</label>
+                            <input ng-model="address.Street"/>
+                        </md-input-container>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>City</label>
+                            <input flex="flex" ng-model="address.city"/>
+                        </md-input-container>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>State</label>
+                            <input ng-model="address.state"/>
+                        </md-input-container>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>Postal Code</label>
+                            <input ng-model="address.postalCode"/>
+                        </md-input-container>
+                        <md-input-container class="md-block" flex="flex">
+                            <md-button class="md-primary md-raised" ng-click="addAddress(address)">Add Address</md-button>
+                        </md-input-container>
+                    </md-dialog-content>
+                </md-dialog>
+            </script>
         </form>
     </div>
-
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
