Updated address for backend

--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -147,7 +147,7 @@
                         <div layout="layout" layout-sm="column"></div>
                         <md-input-container class="md-block" flex="flex">
                             <label>Street Address</label>
-                            <input ng-model="address.Street"/>
+                            <input ng-model="address.streetAddress"/>
                         </md-input-container>
                         <div layout="layout" layout-sm="column"></div>
                         <md-input-container class="md-block" flex="flex">
