--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -131,8 +131,8 @@
             </div>
             <a class="btn btn-success btn-block"
                ng-click="model.update(model.user)">Update</a>
-            <a class="btn btn-success btn-block" ng-click="model.showDialog($event)">Add Address</a>
-            <script type="text/ng-template" id="dialogContent.tmpl.html">
+            <a class="btn btn-success btn-block" ng-click="model.showAddressDialog($event)">Add Address</a>
+            <script type="text/ng-template" id="addressDialogContent.tmpl.html">
                 <md-dialog class="fullscreen-dialog" aria-label="Full Screen Dialog Test">
                     <md-toolbar>
                         <div class="md-toolbar-tools">
@@ -166,6 +166,35 @@
                         </md-input-container>
                         <md-input-container class="md-block" flex="flex">
                             <md-button class="md-primary md-raised" ng-click="addAddress(address)">Add Address</md-button>
+                        </md-input-container>
+                    </md-dialog-content>
+                </md-dialog>
+            </script>
+            <a class="btn btn-success btn-block" ng-click="model.showPhoneDialog($event)">Add Address</a>
+            <script type="text/ng-template" id="phoneDialogContent.tmpl.html">
+                <md-dialog class="fullscreen-dialog" aria-label="Full Screen Dialog Test">
+                    <md-toolbar>
+                        <div class="md-toolbar-tools">
+                            <md-button class="md-icon-button" ng-click="closeDialog()">
+                                <md-icon class="fa fa-times fa-2x"></md-icon>
+                            </md-button>
+                            <h2 flex="flex">Address</h2>
+                        </div>
+                    </md-toolbar>
+                    <md-dialog-content>
+                        <form name="phoneForm"></form>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>Phone</label>
+                            <input ng-model="phone.phoneNo"/>
+                        </md-input-container>
+                        <div layout="layout" layout-sm="column"></div>
+                        <md-input-container class="md-block" flex="flex">
+                            <label>Type</label>
+                            <input flex="flex" ng-model="phone.Type"/>
+                        </md-input-container>
+                        <md-input-container class="md-block" flex="flex">
+                            <md-button class="md-primary md-raised" ng-click="addPhone(phone)">Add Phone</md-button>
                         </md-input-container>
                     </md-dialog-content>
                 </md-dialog>
