--- a/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
@@ -15,7 +15,7 @@
             <a class="name" href="#!/login">Login</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/home">Planet M</a>
+            <a class="navbar-brand" href="#!/home">Movie On</a>
         </div>
     </div>
 </nav>
