--- a/PhaseB/MovieOn/src/main/webapp/view/user-inventory.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-inventory.view.client.html
@@ -8,18 +8,14 @@
                 <span class="glyphicon glyphicon-option-vertical pull-left" ng-click="model.closeNav()"></span>
             </div>
         </a>
-        <div class="navbar-text pull-right" ng-if="model.userId">
+        <div class="navbar-text pull-right" ng-show="model.userId">
             <a class="name" href="#/user">Hi {{model.user.firstName}}</a>
-        </div>
-        <div class="navbar-text pull-right" ng-if="!model.userId">
-            <a class="name" href="#/login">Login</a>
         </div>
         <div class="navbar-header">
             <a class="navbar-brand" ng-click="model.gotoHome()">MovieOn</a>
         </div>
     </div>
 </nav>
-
 <div id="mySidenav" class="sidenav">
     <div ng-show="model.userId">
         <a href="#/user">Profile</a>
@@ -47,7 +43,7 @@
             Orders
             <span><i class="fa fa-usd"></i></span>
         </a>
-        <a href="#/inventory">
+        <a class="active-page" href="#/inventory">
             Inventory
             <span><i class="fa fa-table"></i></span>
         </a>
@@ -67,60 +63,60 @@
         </a>
     </div>
     <div ng-show="!model.userId">
-        <a href="#!/login">Login</a>
+        <a href="#/login">Login</a>
     </div>
     <div ng-show="model.userId">
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
-<div id="main">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap=true>
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to={{$index}} ng-class="{active:!$index}" ng-repeat="movie in model.upcomingMovies"></li>
-        </ol>
-
-        <div class="carousel-inner">
-            <div class="item" ng-class="{active:!$index}" ng-repeat="movie in model.upcomingMovies">
-                <img class="hm-img" ng-src={{movie.backdrop_path}}>
-                <a class="carousel-caption home-image" ng-click="model.getMovieDetails(movie.id)">
-                    <h4>{{movie.title}}</h4>
-                </a>
-            </div>
+<div class="container-fluid" id="main">
+    <h5><strong>Inventory</strong></h5>
+    <div ng-show="model.error" class="alert alert-danger" role="alert">
+        {{model.error}}
+    </div>
+    <div ng-show="model.message" class="alert alert-success" role="alert">
+        {{model.message}}
+    </div>
+    <div class="media panel panel-primary" ng-repeat="movie in model.movieList" >
+        <div class="media-left media-middle">
+            <a ng-click="model.getMovieDetails(movie.data.id)">
+                <img class="media-object img-max" ng-src="{{movie.data.backdrop_path}}">
+            </a>
         </div>
-
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-
-        <div class="hidden-xs">
-            <form id="search-bar" class="input-group" ng-submit="model.searchTitle(search)">
-                <input ng-model="search" type="text" class="form-control search" placeholder="Search for movies...">
-                <span ng-click="model.searchTitle(search)" class="input-group-addon glyphicon glyphicon-search"></span>
-            </form>
+        <div class="media-body">
+            <a ng-click="model.getMovieDetails(movie.data.id)" class="text">
+                <h4 ng-click="model.getMovieDetails(movie.data.id)" class="hideOverflow">Movie: {{movie.data.title}}</h4>
+            </a>
+            <a ng-click="model.getUserInfo(model.userList[$index]._id)" class="text">
+                <div class="input-group">
+                    <input ng-model="model.user.moviesSold[$index].num" type="number" class="form-control fixwidth" placeholder="#Copies">
+                    <span class="pull-left buy-button">
+                        <button ng-click="model.updateMovie(model.user.moviesSold[$index].num, movie.data.id)"
+                                class="btn btn-warning no-margin"
+                                type="button"
+                                data-toggle="modal"
+                                data-target="#myModal"
+                                data-backdrop="static"
+                                data-keyboard="false">Update #Copies</button>
+                    </span>
+                </div>
+            </a>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="visible-xs">
-            <form class="input-group gap" ng-submit="model.searchTitle(search)">
-                <input ng-model="search" type="text" class="form-control search" placeholder="Search for movies...">
-                <span ng-click="model.searchTitle(search)" class="input-group-addon glyphicon glyphicon-search"></span>
-            </form>
-        </div>
-
-        <div class="row content">
-            <div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="movie in model.movies">
-                <a ng-click="model.getMovieDetails(movie.id)" class="thumbnail">
-                    <img class="img-responsive img" ng-src="{{movie.backdrop_path}}">
-                    <div class = "caption">
-                        <h4 class="text-center hideOverflow">{{movie.title}}</h4>
-                    </div>
-                </a>
+</div>
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Hello {{model.user.firstName}}</h4>
+            </div>
+            <p>Successfully updated the movie inventory.</p>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="model.gotoSold()">Close</button>
             </div>
         </div>
+
     </div>
 </div>
 
@@ -140,7 +136,6 @@
                 <span class="glyphicon glyphicon-user"></span>
             </a>
             <ul class="dropdown-menu">
-                <li ng-show="!model.userId"><a href="#/login">Login</a></li>
                 <li ng-show="model.userId"><a href="#/user">Profile</a></li>
                 <li ng-show="model.userId"><a ng-click="model.logout()">Logout</a></li>
             </ul>
