--- a/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
@@ -71,7 +71,7 @@
             </a>
             <ul class="dropdown-menu">
                 <li><a>Login</a></li>
-                <li><a href="#/register">Register</a></li>
+                <li><a href="#!/register">Register</a></li>
             </ul>
         </div>
     </div>
