--- a/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/login.view.client.html
@@ -9,13 +9,13 @@
             </div>
         </a>
         <div class="navbar-header">
-            <a class="navbar-brand">MovieOn</a>
+            <a class="navbar-brand" href="#!/home">MovieOn</a>
         </div>
     </div>
 </nav>
 <div id="mySidenav" class="sidenav">
     <div>
-        <a class="active-page">Login</a>
+        <a href="#!/login" class="active-page">Login</a>
         <a href="#!/register">Register</a>
     </div>
 </div>
