--- a/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
@@ -9,7 +9,7 @@
             </div>
         </a>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/login">MovieOn</a>
+            <a class="navbar-brand" href="#!/home">MovieOn</a>
         </div>
     </div>
 </nav>
