--- a/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
@@ -22,46 +22,46 @@
 
 <div id="mySidenav" class="sidenav">
     <div ng-show="model.userId">
-        <a href="#/user">Profile</a>
+        <a href="#!/profile">Profile</a>
     </div>
     <div ng-show="model.user.type == 'Buyer'">
-        <a href="#/like">
+        <a href="#!/like">
             Likes
             <span><i class="fa fa-thumbs-up"></i></span>
         </a>
-        <a href="#/bought">
+        <a href="#!/bought">
             Bought
             <span><i class="fa fa-file-video-o"></i></span>
         </a>
-        <a href="#/wishlist">
+        <a href="#!/wishlist">
             Wishlist
             <span><i class="fa fa-star"></i></span>
         </a>
-        <a href="#/fav">
+        <a href="#!/fav">
             Favorite Sellers
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
     <div ng-show="model.user.type == 'Seller'">
-        <a href="#/order">
+        <a href="#!/order">
             Orders
             <span><i class="fa fa-usd"></i></span>
         </a>
-        <a href="#/inventory">
+        <a href="#!/inventory">
             Inventory
             <span><i class="fa fa-table"></i></span>
         </a>
     </div>
     <div ng-show="model.user.type == 'Admin'">
-        <a href="#/users">
+        <a href="#!/users">
             All Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
-        <a href="#/msgs">
+        <a href="#!/msgs">
             Messages
             <span><i class="fa fa-envelope"></i></span>
         </a>
-        <a href="#/orders">
+        <a href="#!/orders">
             All Orders
             <span><i class="fa fa-shopping-basket"></i></span>
         </a>
@@ -110,7 +110,7 @@
                             <i class="fa fa-star-o font-gap fa-2x" data-toggle="tooltip" title="Login to add to wishlist."></i>
                         </a>
                         <div>
-                            <a class="imdb" href="{{model.movie.imdb_id}}" target="_blank">
+                            <a class="imdb" href="https://www.imdb.com/title/{{model.movie.imdb_id}}" target="_blank">
                                 <i class="fa fa-imdb fa-3x"></i>
                             </a>
                             <button type="button" data-toggle="tooltip" title="Login to buy." class="btn btn-warning shift-further-up">Buy Movie</button>
@@ -167,26 +167,6 @@
                     <h5 class="shift-down"><strong>Directed By: {{model.movieDirector}}</strong></h5>
                     <h5 class="shift-down"><strong>Stars: </strong></h5>
                     <h5 ng-repeat="actor in model.cast"><strong>{{actor.name}}</strong></h5>
-                </div>
-            </div>
-            <div class="row panel panel-default">
-                <div class="col-sm-6">
-                    <a href="#!/movie/model.movieId/image" class="thumbnail">
-                        <div class = "caption">
-                            <h4 class="text-center hideOverflow">Movie Stills and Posters</h4>
-                        </div>
-                        <img class="img-responsive" ng-src="{{model.movie.backdrop_path}}">
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#!/movie/model.movieId/video" class="thumbnail">
-                        <div class = "caption">
-                            <h4 class="text-center hideOverflow">Movie Trailers</h4>
-                        </div>
-                        <div class="flex-video youtube-widget">
-                            <iframe ng-src="{{model.doYouTrustUrl(model.movieVideo.key)}}" frameborder="0"></iframe>
-                        </div>
-                    </a>
                 </div>
             </div>
 
