--- a/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
@@ -12,7 +12,7 @@
             <a class="name" href="#/user">Hi {{model.user.firstName}}</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" ng-click="model.gotoHome()">Planet M</a>
+            <a class="navbar-brand" ng-click="model.gotoHome()">MovieOn</a>
         </div>
     </div>
 </nav>
@@ -77,19 +77,18 @@
     <div ng-show="model.message" class="alert alert-success" role="alert">
         {{model.message}}
     </div>
-    <div class="media panel panel-primary" ng-repeat="movie in model.movieList">
-        {{movie}}
+    <div class="media panel panel-primary" ng-repeat="movie in model.likeList">
         <div class="media-left media-middle">
-            <a ng-click="model.getMovieDetails(movie.movie.id)">
+            <a href="#!/movie/{{movie.movie.id}}">
                 <img class="media-object img-max" ng-src="{{movie.movie.backdrop_path}}">
             </a>
         </div>
         <div class="media-body">
             <a ng-click="model.getMovieDetails(movie.data.id)" class="text">
-                <h4 class="media-heading buy-button gap hideOverflow">{{movie.data.title}}</h4>
+                <h4 class="media-heading buy-button gap hideOverflow">{{movie.movie.original_title}}</h4>
             </a>
             <a class="imdb">
-                <i class="fa fa-thumbs-up fa-2x blue buy-button" ng-click="model.unlikeMovie(movie.data.id, $index)"></i>
+                <i class="fa fa-thumbs-up fa-2x blue buy-button" ng-click="model.unlikeMovie(movie.movie.id, $index)"></i>
             </a>
         </div>
     </div>
