--- a/PhaseB/MovieOn/src/main/webapp/view/users.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/users.view.client.html
@@ -12,7 +12,7 @@
             <a class="name" href="#/user">Hi {{model.user.firstName}}</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" ng-click="model.gotoHome()">Planet M</a>
+            <a class="navbar-brand" ng-click="model.gotoHome()">MovieOn</a>
         </div>
     </div>
 </nav>
