Added unlike method in user-like controller

--- a/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
@@ -88,7 +88,7 @@
                 <h4 class="media-heading buy-button gap hideOverflow">{{movie.movie.original_title}}</h4>
             </a>
             <a class="imdb">
-                <i class="fa fa-thumbs-up fa-2x blue buy-button" ng-click="model.unlikeMovie(movie.movie.id, $index)"></i>
+                <i class="fa fa-thumbs-up fa-2x blue buy-button" ng-click="model.unlikeMovie(movie.movie.id)"></i>
             </a>
         </div>
     </div>
